--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "css-loader": "^4.3.0",
     "firebase": "^8.6.1",
     "moment": "^2.29.1",
-    "node-sass": "^6.0.0",
+    "npm": "^7.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "sass-loader": "^10.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "4.14"
   }
 }
