--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "sass-loader": "^10.1.1",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
