--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "css-loader": "^4.3.0",
     "firebase": "^8.6.1",
+    "firebase-auth": "^0.1.2",
     "moment": "^2.29.1",
     "npm": "^7.13.0",
     "react": "^17.0.2",
