--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todoist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kshavkatg.github.io/doit/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -9,6 +10,7 @@
     "css-loader": "^4.3.0",
     "firebase": "^8.6.1",
     "firebase-auth": "^0.1.2",
+    "gh-pages": "^3.2.0",
     "moment": "^2.29.1",
     "npm": "^7.13.0",
     "react": "^17.0.2",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run-script build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
